test/qnumericError5.slq

def main(){
	a:=[]:ℕ[]; /// error
	a~=[1];
}
